<resources>
    <string name="app_name">Campus Connect</string>
    <string name="event_submit">Submit Event</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="time">Start Time</string>
    <string name="goto_event_creation">Event Creation</string>
    <string name="TopBanner_EventView">Event View</string>
    <string name="goto_event_detailed_view">Event Detailed View</string>
    <string name="goto_saved_events">Saved Events</string>
    <string name="event_date">Event Date</string>
    <string name="calendar">Calendar</string>
    <string name="backto_main">Back</string>
    <string name="new_phone_who_dis">-New phone. who dis</string>
    <string name="hello_world">-Hello World!</string>
    <string name="showing_events_for">Showing Events for</string>
    <string name="desc">Description</string>
    <string name="org">Organization</string>
    <string name="tags">Tags</string>
    <string name="toggle_search">Toggle Search</string>
	<string name="saved_events">Saved Events</string>
	<string name="today">Today</string>
	<string name="search_tags">Search Tags</string>
    <string name="search_event_name">Search Event Name</string>
	<string name="str_return_to_home">Return to Home</string>
	<string name="event_list_header">Event Details</string>
    <string name="unfollow">Unfollow</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="rsvp">RSVP</string>
	<string name="save_event">Save Event</string>
	<string-array name="tags_array">
        <item>(None)</item>
        <item>Medicine</item>
        <item>Career Fair</item>
        <item>Orientation</item>
        <item>Fundraiser</item>
        <item>Business</item>
    </string-array>
</resources>
