<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <!-- TODO: Rename file -->
    
    <!-- List of Events -->
    <TextView
        android:id="@+id/event_list_static_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/showing_events_for"
        android:textColor="@color/primaryGreen_75"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_list_dynamic_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/primaryGreen_75"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_list_static_header" />

    <ListView
        android:id="@+id/events_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_list_dynamic_header">
    </ListView>
    
    <Button
            android:id="@+id/searchTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="261dp"
            android:layout_marginBottom="64dp"
            android:text="@string/search_tags"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent" />
    
    
    <Button
            android:id="@+id/searchEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/search_event_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/searchTag"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="parent" />
    
    <ImageButton
            android:id="@+id/returnToHome"
            android:layout_width="53dp"
            android:layout_height="57dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/str_return_to_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.94"
            app:srcCompat="@drawable/menu_back" />


</androidx.constraintlayout.widget.ConstraintLayout>



    <!-- Forming of actual individual list-items => [ LAYOUT: events_list_item.xml ] -->
    <!-- TODO: Review ListView/Scrolling optimization at link below -->
    <!-- https://bit.ly/2TlNLRq -->