<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/event_creation_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/primaryGreen_100">
	
	<include layout="@layout/toolbar_main" />
	
	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/toolbar"
			android:scrollbarStyle="insideInset"
			android:scrollbars="vertical">
		
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:orientation="vertical"
				android:padding="30dp">
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:paddingVertical="15dp">
				
				<TextView
						android:layout_width="140dp"
						android:layout_height="wrap_content"
						android:ems="5"
						android:text="Location:"
						android:textColor="@color/primaryGold_100"
						android:textSize="20dp"
						android:textStyle="bold" />
				
				<EditText
						android:id="@+id/LocationField"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="Location"
						android:inputType="textPersonName"
						android:textColor="@color/White"
						android:textCursorDrawable="@null" />
			
			</LinearLayout>
			
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:paddingVertical="15dp">
				
				<TextView
						android:layout_width="140dp"
						android:layout_height="wrap_content"
						android:ems="5"
						android:text="Start Time:"
						android:textColor="@color/primaryGold_100"
						android:textSize="20sp"
						android:textStyle="bold" />
				
				<EditText
						android:id="@+id/StartTimeField"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/time"
						android:inputType="" />
			</LinearLayout>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:paddingVertical="15dp">
				
				<TextView
						android:layout_width="140dp"
						android:layout_height="wrap_content"
						android:ems="5"
						android:text="Event Title:"
						android:textColor="@color/primaryGold_100"
						android:textSize="20sp"
						android:textStyle="bold" />
				
				<EditText
						android:id="@+id/EventNameField"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/event_name"
						android:inputType="textPersonName" />
			</LinearLayout>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:paddingVertical="15dp">
				
				<TextView
						android:layout_width="140dp"
						android:layout_height="wrap_content"
						android:ems="5"
						android:text="Select Date:"
						android:textColor="@color/primaryGold_100"
						android:textSize="20sp"
						android:textStyle="bold" />
				
				<EditText
						android:id="@+id/EventDate"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/event_date"
						android:inputType="date" />
			
			</LinearLayout>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:paddingVertical="15dp">
				
				<TextView
						android:layout_width="140dp"
						android:layout_height="wrap_content"
						android:ems="5"
						android:text="Description:"
						android:textColor="@color/primaryGold_100"
						android:textSize="20sp"
						android:textStyle="bold" />
				
				<EditText
						android:id="@+id/DescriptionField"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/desc"
						android:inputType="textPersonName" />
			</LinearLayout>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:paddingVertical="15dp">
				
				<TextView
						android:layout_width="140dp"
						android:layout_height="wrap_content"
						android:ems="5"
						android:text="Organization:"
						android:textColor="@color/primaryGold_100"
						android:textSize="20sp"
						android:textStyle="bold" />
				
				<EditText
						android:id="@+id/Organization"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/org"
						android:inputType="textPersonName" />
			</LinearLayout>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="77dp"
					android:gravity="center"
					android:paddingTop="15dp"
					android:paddingBottom="40dp">
				
				<TextView
						android:layout_width="140dp"
						android:layout_height="wrap_content"
						android:ems="5"
						android:text="Tag (Optional)"
						android:textColor="@color/primaryGold_100"
						android:textSize="15sp"
						android:textStyle="bold" />
				<!-- SPINNER -->
				<Spinner
						android:id="@+id/tags"
						android:layout_width="fill_parent"
						android:layout_height="30dp"
						android:layout_marginTop="20dp"
						android:layout_marginBottom="20dp" />
			
			</LinearLayout>
			
			<Button
					android:id="@+id/event_submit_button"
					android:layout_width="194dp"
					android:layout_height="wrap_content"
					android:text="@string/event_submit"
					android:visibility="visible"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintHorizontal_bias="0.551"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:visibility="visible" />
		</LinearLayout>
	</ScrollView>
</RelativeLayout>